<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WPS</string>
    <string name="app_description">WiFi Positioning System</string>
    <string name="action_navigation">Menü</string>
    <string name="action_localisation">Lokalisationsmodus</string>
    <string name="action_new_floor">Neue Karte erstellen</string>
    <string name="action_measure">Messmodus</string>
    <string name="action_debug">Datenbank anzeigen</string>
    <string name="building">Gebäude</string>
    <string name="activity_new_floor_create_building">Gebäude erstellen</string>
    <string name="activity_new_floor_create_floor">Neue Etage erstellen</string>
    <string name="text_measure_button">Messen</string>
    <string name="menu_export">Datenbank exportieren</string>
    <string name="menu_import">Datenbank importieren</string>
    <string name="menu_clear">Datenbank leeren</string>
    <string name="menu_building">Gebäude</string>
    <string name="floorlevel">Etagennummer</string>
    <string name="activity_new_floor_floorname">Etagenname</string>
    <string name="activity_new_floor_floorpath">Kartenpfad</string>
    <string name="floor_ground">Erdgeschoss</string>
    <string name="floor_upper">Obergeschoss</string>
    <string name="floor_basement">Untergeschoss</string>
    <string name="activity_new_floor_north">Nordausrichtung</string>
    <string name="error_create_building">Gebäude konnte nicht erstellt werden</string>
    <string name="success_create_building">Gebäude erfolgreich erstellt</string>
    <string name="error_empty_input">Ein Feld ist leer, bitte ausfüllen</string>
    <string name="error_create_floor">Etage konnte nicht erstellt werden</string>
    <string name="success_create_floor">Etage erfolgreich erstellt</string>
    <string name="error_no_building">Keine Gebäude vorhanden/ausgewählt</string>
    <string name="action_data">Daten bearbeiten</string>
    <string name="error_sd_dir">Kann SD Karte nicht beschreiben!</string>
    <string name="error_no_measure_point">Bitte einen Messpunkt wählen!</string>
    <string name="error_no_floor_file">Keine Kartendatei vorhanden!</string>
    <string name="error_scanning">Fehler beim Scannen!</string>
    <string name="success_scanning">APs gefunden</string>
    <string name="database_export_success">Datenbank erfolgreich exportiert</string>
    <string name="database_import_success">Datenbank erfolgreich importiert</string>
    <string name="database_clear_success">Datenbank erfolgreich geleert</string>
    <string name="toggle_localisation">Lokalisierung</string>
    <string name="please_wait">Bitte warten</string>
    <string name="scan_no_ap">Keine Ergebnisse, bitte die Messung wiederholen</string>
    <string name="button_center">Auf aktuelle Position zentrieren</string>
    <string name="measure_mark_point">Messpunkt markieren</string>
    <string name="measure_face_north">Nach Norden ausrichten</string>
    <string name="measure_face_east">Nach Osten ausrichten</string>
    <string name="measure_face_south">Nach Süden ausrichten</string>
    <string name="measure_face_west">Nach Westen ausrichten</string>
    <string name="database_clear_question">Wollen Sie wirklich alle Daten unwiderruflich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="database_export_question">Datenbank Export</string>
    <string name="choose_filename">Geben Sie den Dateinamen ein</string>
    <string name="file_not_exist">Die Datei existiert nicht</string>
    <string name="floors">Stockwerke</string>
    <string name="new_name">Neuer Name</string>
    <string name="rename">Umbennen</string>
    <string name="delete">Löschen</string>
    <string name="save">Speichern</string>
    <string name="measurepoints">Messpunkte</string>
    <string name="delete_all">Alle löschen</string>
    <string name="delete_last_measurepoint">Letzten Messpunkt löschen</string>
    <string name="delete_measurepoints_on_floor">Messpunkte der Etage löschen</string>
    <string name="success_delete">%1$s erfolgreich gelöscht</string>
    <string name="success_save">%1$s erfolgreich gespeichert</string>
    <string name="error_delete">%1$s: Fehler beim Löschen</string>
    <string name="error_save">%1$s: Fehler beim Speichern</string>
    <string name="floor">Stockwerk</string>
    <string name="measurepoint">Messpunkt</string>
    <string name="error_short_name">Name zu kurz</string>
    <string name="scan">Scan</string>
    <string name="scans">Scans</string>
    <string name="delete_last_scan">Letzten Scan löschen</string>
    <string name="error_db_failure">Schwerwiegender Datenbankfehler! Bitte alle Daten löschen und erneut versuchen.</string>
    <string name="error_loc_building_not_found">Gebäude nicht gefunden.</string>
    <string name="error_loc_floor_not_found">Stockwerk nicht gefunden.</string>
    <string name="error_loc_aps_not_found">Keine Accesspoints gefunden.</string>
    <string name="error_loc_empty_map">Leere Map.</string>
    <string name="error_loc_position_not_found">Position nicht gefunden.</string>
    <string name="same_name_building">Ein Gebäude mit diesem Namen existiert bereits</string>
    <string name="same_name_floor">Eine Etage mit diesem Namen existiert bereits</string>
    <string name="next">next</string>
    <string name="next_line">next line</string>
    <string name="loc_force_change_building">Gebäudewechsel</string>
    <string name="loc_force_change_floor">Etagenwechsel</string>
    <string name="confirm_delete_question">%1$s wirklich löschen?</string>
    <string name="confirm">Bestätigen</string>
    <string name="spinner_empty">- Leer -</string>
    <string name="force_building">Gebäude-/Etagenwechsel</string>
    <string name="menu_toggle_show_debug">Details anzeigen</string>
    <string name="menu_force_change_building">Cache leeren</string>
    <string name="loc_started">Lokalisierung gestartet. Bitte warten</string>

</resources>