<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewFloorActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/createBuildingEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/building"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <Button
            android:id="@+id/bCreateBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:onClick="createBuilding"
            android:text="@string/activity_new_floor_create_building" />

        <Spinner
            android:id="@+id/buildingSelectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/menu_building" />

        <EditText
            android:id="@+id/floorLevelEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/activity_new_floor_floorlevel"
            android:inputType="numberSigned"
            android:maxLength="6"
            android:maxLines="1" />

        <EditText
            android:id="@+id/floorNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/activity_new_floor_floorname" />


        <TextView
            android:id="@+id/floorPathView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/activity_new_floor_floorpath"
            android:longClickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/bCreateFloor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="createFloor"
            android:text="@string/activity_new_floor_create_floor" />

    </LinearLayout>

</ScrollView>