<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MeasureActivity" >

    <de.rwth.ti.common.IPMapView
        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <Spinner
        android:id="@+id/buildingSelectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/floorSelectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/buildingSelectSpinner" />

    <Button
        android:id="@+id/measure_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="measure"
        android:text="@string/text_measure_button" />

    <TextView
        android:id="@+id/direction_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/floorSelectSpinner"
        android:layout_marginTop="@dimen/spinner_item_margin_top"
        android:paddingLeft="@dimen/spinner_item_padding_left"
        android:text="@string/measure_mark_point"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<TextView
	    android:id="@+id/compass_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignTop="@id/direction_text_view"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageButton
        android:id="@+id/deleteLastMPButton"
        android:layout_width="@dimen/icon_button_width"
        android:layout_height="@dimen/icon_button_height"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/measure_button"
        android:contentDescription="@string/delete_last_measurepoint"
        android:onClick="deleteMeasureButton"
        android:src="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/buttonNext"
        android:layout_width="@dimen/icon_button_width"
        android:layout_height="@dimen/icon_button_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/next"
        android:onClick="next"
        android:src="@drawable/next" />

    <ImageButton
        android:id="@+id/buttonNextLine"
        android:layout_width="@dimen/icon_button_width"
        android:layout_height="@dimen/icon_button_height"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/buttonNext"
        android:contentDescription="@string/next_line"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:onClick="nextLine"
        android:src="@drawable/next_line" />

</RelativeLayout>
